Jan 31 2004  3.1.0  wlanng no longer depends on wireless extentions
Jan 28 2004  3.1.0  Panels client now scrolls to next network after tagging
                    Fixed changelog dates (Thanks Alexander...)
                    Added a dirty flag to tcpclient networks listing to save
                     on CPU usage when the network list isn't actually changing
                    Improved use of the dirty flag to conserve cpu
                    Fixed init of a variable in panels
                    Fixed various bugs in panels
Jan 27 2004  3.1.0  Modified internals to packet source handling to allow for
                     restoring card details on sources that support it
                    Merged patch from Pedro for more OpenBSD stuff
                    Merged patch from Sam for more radiotap support on freebsd.
                     Pending a patch to the MadWifi drivers, this should bring
                     functional support for FreeBSD.
Jan 26 2004  3.1.0  Fixed FCS byte trimming for MadWifi, this should fix Kismet
                     discarding most packets as invalid (Thanks, Anton)
                    Fixed monitor_wext not setting the initial channel if the
                     card is already in monitor mode (Thanks, Anton)
                    Merged additional patches from Sam for FreeBSD/Radiotap
Jan 25 2004  3.1.0  Long-asked for, the panels client is now able to lock
                     onto the channel of a selected network and stop 
                     hopping.  'L' to lock, 'H' to hop.  Currently only works
                     with a single capture source, multisource support to 
                     follow soon.
                    Merged patch from Josh Wright to handle airopeek files with
                     wtapfile
                    Merged patch from Pedro to fix bringing an interface up in
                     OpenBSD
Jan 24 2004  3.1.0  Merged patch from Ray Essick to add an alternate date 